Fix issue where form bled into svg on mobile splash.

--- a/coursereviews/static/static_pages/less/splash.less
+++ b/coursereviews/static/static_pages/less/splash.less
@@ -62,7 +62,10 @@ svg {
     margin-bottom: 0;
   }
   @media (max-width: 991px) {
-    margin-top: 120px;
+    margin-top: 220px;
+    &.has-message {
+      margin-top: 120px;
+    }
     input[type='submit'] {
       width: 100%;
     }
